# CS6913

./: .gitignore
project2/: meson.build
project2/src/: global.h  main.c  posting.c  posting.h
project2/src/compression/: varbyte.c  varbyte.h
project2/src/indexbuilder/: indexer.c  indexer.h  lexicon.c  lexicon.h  pagetable.c  pagetable.h
project2/src/indexbuilder/naive/: indexer.c  indexer.h
project2/src/indexer/: docparser.h  doctokenizer.c  doctokenizer.h  docwriter.c  docwriter.h  indexbuilder.c  indexbuilder.h  lexicon.h  postingwriter.c  postingwriter.h
project2/src/intermfilegen/: docparser.c  docparser.h  filegen.c  filegen.h
project2/src/mergesort/: mergesort.c  mergesort.h
project2/src/michaellib/: buffer.c  buffer.h  bytevec.c  bytevec.h  minheap.c  minheap.h  postingvec.c  postingvec.h  string.c  string.h  ulongvec.c  ulongvec.h  utility.c  utility.h
project2/src/michaellib/vector/: bytevec.c  bytevec.h  stringvec.c  stringvec.h  ulongvec.h
project2/src/query/: BM25.c  BM25.h  DAAT.c  DAAT.h  disjunctive.c  disjunctive.h  listpointer.c  listpointer.h
project2/src/reader/: dirreader.c  dirreader.h  metareader.c  metareader.h  reader.c  reader.h
